--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
     <title>Beaverhacks</title>
   </head>
   <body>
+    <img src="https://github.com/OregonStateHackathonClub/osu-hackathon-club-site-2.0/blob/3e9fb4b136b23e63188686197c3dc117fd1682af/src/images/Screenshot%202022-08-23%20115754.png"/>
     <div id="root"></div>
     <!--
       This HTML file is a template.
